// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/masonry/demo/DemoItem.tsx correctly 1`] = `
<div
  style="background:#f0f0f0;border-radius:4px;padding:4px"
/>
`;

exports[`renders components/masonry/demo/basic.tsx correctly 1`] = `
<div
  class="ant-masonry"
  style="--ant-masonry-height:0px"
>
  <div
    style="height:150px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    1
  </div>
  <div
    style="height:30px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    2
  </div>
  <div
    style="height:90px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    3
  </div>
  <div
    style="height:70px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    4
  </div>
  <div
    style="height:110px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    5
  </div>
  <div
    style="height:150px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    6
  </div>
  <div
    style="height:130px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    7
  </div>
  <div
    style="height:80px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    8
  </div>
  <div
    style="height:50px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    9
  </div>
  <div
    style="height:90px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    10
  </div>
  <div
    style="height:100px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    11
  </div>
  <div
    style="height:150px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    12
  </div>
  <div
    style="height:30px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    13
  </div>
  <div
    style="height:50px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    14
  </div>
  <div
    style="height:80px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    15
  </div>
  <div
    class="ant-masonry-item-line-break"
    data-type="line-break"
    style="--ant-masonry-item-order:1"
  />
  <div
    class="ant-masonry-item-line-break"
    data-type="line-break"
    style="--ant-masonry-item-order:2"
  />
  <div
    class="ant-masonry-item-line-break"
    data-type="line-break"
    style="--ant-masonry-item-order:3"
  />
  <div
    class="ant-masonry-item-line-break"
    data-type="line-break"
    style="--ant-masonry-item-order:4"
  />
</div>
`;

exports[`renders components/masonry/demo/responsive.tsx correctly 1`] = `
<div
  class="ant-masonry"
  style="--ant-masonry-height:0px"
>
  <div
    style="height:120px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    1
  </div>
  <div
    style="height:45px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    2
  </div>
  <div
    style="height:85px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    3
  </div>
  <div
    style="height:160px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    4
  </div>
  <div
    style="height:95px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    5
  </div>
  <div
    style="height:140px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    6
  </div>
  <div
    style="height:75px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    7
  </div>
  <div
    style="height:110px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    8
  </div>
  <div
    style="height:65px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    9
  </div>
  <div
    style="height:130px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    10
  </div>
  <div
    style="height:90px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    11
  </div>
  <div
    style="height:145px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    12
  </div>
  <div
    style="height:55px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    13
  </div>
  <div
    style="height:100px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    14
  </div>
  <div
    style="height:80px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    15
  </div>
  <div
    class="ant-masonry-item-line-break"
    data-type="line-break"
    style="--ant-masonry-item-order:1"
  />
  <div
    class="ant-masonry-item-line-break"
    data-type="line-break"
    style="--ant-masonry-item-order:2"
  />
  <div
    class="ant-masonry-item-line-break"
    data-type="line-break"
    style="--ant-masonry-item-order:3"
  />
</div>
`;

exports[`renders components/masonry/demo/sequential.tsx correctly 1`] = `
<div
  class="ant-masonry"
  style="--ant-masonry-height:0px"
>
  <div
    style="height:135px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    1
  </div>
  <div
    style="height:60px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    2
  </div>
  <div
    style="height:105px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    3
  </div>
  <div
    style="height:180px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    4
  </div>
  <div
    style="height:75px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    5
  </div>
  <div
    style="height:85px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    6
  </div>
  <div
    style="height:115px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    7
  </div>
  <div
    style="height:70px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    8
  </div>
  <div
    style="height:165px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    9
  </div>
  <div
    style="height:40px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    10
  </div>
  <div
    style="height:120px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    11
  </div>
  <div
    style="height:90px;background:#f0f0f0;border-radius:4px;padding:4px"
  >
    12
  </div>
  <div
    class="ant-masonry-item-line-break"
    data-type="line-break"
    style="--ant-masonry-item-order:1"
  />
  <div
    class="ant-masonry-item-line-break"
    data-type="line-break"
    style="--ant-masonry-item-order:2"
  />
  <div
    class="ant-masonry-item-line-break"
    data-type="line-break"
    style="--ant-masonry-item-order:3"
  />
  <div
    class="ant-masonry-item-line-break"
    data-type="line-break"
    style="--ant-masonry-item-order:4"
  />
</div>
`;
